# coms

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml
coms/: server.py
coms/api/: main.py
coms/core/: __init__.py  settings.py
tests/: conftest.py  testing.py
tests/api/: test_main.py
