[tool.poetry]
name = "numan-coms"
version = "0.1.0"
description = ""
authors = ["Numan <developers@numan.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
ignore = ['ANN401', 'ANN101']
max-line-length = 88
count = true


[tool.coverage.report]
exclude_lines = [
    'if __name__ == .__main__.:',
]
